# HRFusion

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/victor/kryz/hrfusion/: LocateGettingTest.java
app/src/androidTest/java/victor/kryz/hrfusion/entities/: HRItemCriteria.java  JUnitTestBase.java  (+7 more)
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hr.db
app/src/main/cpp/: .gitignore  Entities.h  HRFusion.cpp  Processing.cpp  Processing.h  Reflection.cpp  Reflection.h  Session.cpp  Session.h  Tools.cpp  Tools.h  common.h
app/src/main/cpp/include/: readme.txt
app/src/main/java/victor/kryz/hrfusion/: TitleActivity.java
app/src/main/jniLibs/: readme.txt
app/src/main/jniLibs/x86_64/: readme.txt
app/src/main/res/anim/: slide_in_left.xml  slide_in_up.xml  slide_out_down.xml  slide_out_left.xml  slide_out_none.xml
app/src/main/res/drawable/: ic_chef.xml  ic_country.xml  ic_employee.xml  ic_location.xml  ic_more_horiz.xml  ic_place_home.xml  ic_region.xml
app/src/main/res/layout/: activity_item_detail.xml  activity_item_list.xml  activity_title.xml  content_start.xml  countries_list_item.xml  departments_list_item.xml  employee_detail.xml  employee_detail_extended.xml  employee_job_history.xml  employees_list_item.xml  item_detail.xml  item_list.xml  job_history_list_item.xml  list_item_base.xml  list_item_content.xml  location_detail.xml  locations_list_item.xml  regions_list_item.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/victor/kryz/hrfusion/: ExampleUnitTest.java
(+41 files in other folders)
